[tool.poetry]
name = "wsgi-cloudflare-proxy-fix"
version = "0.1.0"
description = "Sets REMOTE_ADDR to the correct value when behind Cloudflare, based on the X-Real-IP header, when requests originate from Cloudflare's IP range."
authors = ["David Wolever <david@wolever.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
